add page link for building

--- a/programming/javascript/upgrade-guide/v7-v9.md
+++ b/programming/javascript/upgrade-guide/v7-v9.md
@@ -5,7 +5,7 @@ description: This page shows how to upgrade Dynamsoft Barcode Reader JavaScript 
 keywords: user guide, upgrade, javascript, js
 needAutoGenerateSidebar: true
 pageStartVer: 8.4
-permalink: /programming/javascript/upgrade-guide/
+permalink: /programming/javascript/upgrade-guide/v7-v9.html
 ---
 
 # How to Upgrade Dynamsoft Barcode Reader JavaScript Edition From v7.x To v9.x 
