--- a/programming/javascript/upgrade-guide/7to9.md
+++ b/programming/javascript/upgrade-guide/7to9.md
@@ -6,6 +6,7 @@ keywords: user guide, upgrade, javascript, js
 needAutoGenerateSidebar: true
 pageStartVer: 8.4
 permalink: /programming/javascript/upgrade-guide/7To9.html
+noTitleIndex: false
 ---
 
 # How to Upgrade Dynamsoft Barcode Reader JavaScript Edition From v7.x To v9.x 
