update 7to9 update page

--- a/programming/javascript/upgrade-guide/7to9.md
+++ b/programming/javascript/upgrade-guide/7to9.md
@@ -13,7 +13,7 @@ noTitleIndex: false
 
 ## Change your license
 
-   Your v7.x license is not compatible with v9.x, you must [Contact Dynamsoft Sales Team](mailto:sales@dynamsoft.com) to acquire a new license key.
+   Your v7.x license is not compatible with v9.x, you must [Contact Dynamsoft Sales Team](mailto:sales@dynamsoft.com) to acquire a new license key. If you have a subscription license or you have valid maintenance for a perpetual license, the upgrade is free of charge.
 
 ## Update the version number if you are using a **CDN**
 
@@ -94,6 +94,8 @@ await barcodeScanner.updateRuntimeSettings(settings);
 ```
 
 ### Changed Class Names of the Built-in UI elements
+
+If you manipulated any of the built-in UI elements which are located by their class names, you need to update the class name(s) used in your code.
 
 | v7.x in **dbr.scanner.html** | v9.x in **dbr.ui.html**|
 |:-:|:-:|
