finish upgrade guide

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -8,3 +8,188 @@ permalink: /programming/javascript/upgrade-guide/9to10.html
 ---
 
 # How to Upgrade Dynamsoft Barcode Reader JavaScript Edition from v9.x to v10.x
+
+> NOTE
+> 
+> In this guide, we assume the following
+> 1. The `BarcodeReader` or `BarcodeScanner` instance is called `reader` or `scanner`;
+> 2. The `CaptureVisionRouter` instance is called `router`;
+> 3. The `CameraEnhancer` instance is called `cameraEnhancer`;
+> 4. The `CameraView` instance is called `cameraView`;
+
+## Change the way to reference the SDK
+
+In version 9.x, you only need one line of code:
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.31/dist/dbr.js"></script>
+```
+
+In version 10.x, you need to reference modules individually:
+
+```html
+
+```
+
+## Change the APIs for initializing
+
+### License
+
+In version 10, license control is taken over by the "License" module:
+
+| API in v9.x                                      | API in v10.x                                                                                                                                                                                                                              |
+| ------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `Dynamsoft.DBR.BarcodeReader.license`            | [`Dynamsoft.License.LicenseManager.initLicense()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/license/license-manager.html?product=dbr&repoType=web#initlicense)                     |
+| `Dynamsoft.DBR.BarcodeReader.deviceFriendlyName` | [`Dynamsoft.License.LicenseManager.setDeviceFriendlyName()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/license/license-manager.html?product=dbr&repoType=web#setdevicefriendlyname) |
+
+<!--
+LicenseDynamsoft.DBR.BarcodeReader.licenseServer"Dynamsoft.License.LicenseManager._setLicenseServers(server: Array<string>)
+The first string in ""servers"" is the main, others are standby."
+-->
+
+The new module also added the following method:
+
+* [`Dynamsoft.License.LicenseManager.getDeviceUUID()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/license/license-manager.html#getdeviceuuid)
+
+### Others
+
+APIs for setting up the SDK have been taken over by the new classes `CaptureVisionRouter`, `CaptureVisionRouterModule` or `BarcodeReaderModule`:
+
+| API in v9.x                                                                                                    | API in v10.x                                                                                                                |
+| -------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
+| `Dynamsoft.DBR.BarcodeReader.engineResourcePath` or <br> `Dynamsoft.DBR.BarcodeScanner.engineResourcePath`     | `Dynamsoft.CVR.CaptureVisionRouterModule.engineResourcePath` and <br>`Dynamsoft.DBR.BarcodeReaderModule.engineResourcePath` |
+| `Dynamsoft.DBR.BarcodeReader.loadWasm()`   or <br>`Dynamsoft.DBR.BarcodeScanner.loadWasm()`                    | `Dynamsoft.CVR.CaptureVisionRouter.preLoadModule(["dbr"])`                                                                  |
+| `Dynamsoft.DBR.BarcodeReader.isWasmLoaded()`  or <br>`Dynamsoft.DBR.BarcodeScanner.isWasmLoaded()`             | `Dynamsoft.CVR.CaptureVisionRouter.isModuleLoaded('dbr')`                                                                   |
+| `Dynamsoft.DBR.BarcodeReader.version`        or <br>`Dynamsoft.DBR.BarcodeScanner.version`                     | `Dynamsoft.DBR.BarcodeReaderModule.getVersion()`                                                                            |
+| `Dynamsoft.DBR.BarcodeReader.detectEnvironment()`    or <br>`Dynamsoft.DBR.BarcodeScanner.detectEnvironment()` | `Dynamsoft.CVR.CaptureVisionRouter.detectEnvironment()`                                                                     |
+| `Dynamsoft.DBR.BarcodeReader.onWarning`      or <br>`Dynamsoft.DBR.BarcodeScanner.onWarning`                   | `Dynamsoft.CVR.CaptureVisionRouter.onWarning` and <br>`Dynamsoft.DCE.CameraEnhancer.onWarning`                              |
+| `Dynamsoft.DBR.BarcodeReader.createInstance()`or <br>`Dynamsoft.DBR.BarcodeScanner.createInstance()`           | `Dynamsoft.CVR.CaptureVisionRouter.createInstance()`                                                                        |
+
+| API in v9.x                                                         | API in v10.x       |
+| ------------------------------------------------------------------- | ------------------ |
+| `reader.destroyContext()` or <br>`scanner.destroyContext()`         | `router.dispose()` |
+| `reader.isContextDestroyed()` or <br>`scanner.isContextDestroyed()` | `router.disposed`  |
+
+
+## Change the APIs for image processing
+
+### Single-Image processing
+
+| API in v9.x                                 | API in v10.x                                                                                                                                                                                                                                            |
+| ------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `reader.decode()` or <br>`scanner.decode()` | [`router.capture()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/single-file-processing.html?product=dbr&repoType=web#capture) that specifies a template for barcode reading. |
+
+### Multiple-Image processing
+
+| API in v9.x                                         | API in v10.x                                                                                                                                                                                                                                                                                                                                               |
+| --------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `reader.setImageSource()`                           | `router.setInput()`                                                                                                                                                                                                                                                                                                                                        |
+| `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver()`<br>`resultReceiver.onDecodedBarcodesReceived = result => { }`<br>`router.addResultReceiver(resultReceiver)`                                                                                                                                                                              |
+| `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter()`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true)`<br>`router.addResultFilter(filter)`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver()`<br>`resultReceiver.onDecodedBarcodesReceived = result => { }`<br>`router.addResultReceiver(resultReceiver)` |
+| `reader.startScanning()` or <br>`scanner.show()`    | `let view = await Dynamsoft.DCE.CameraView.createInstance()`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view)`<br>`cameraViewContainer.append(view.getUIElement())`<br>`router.setInput(cameraEnhancer)`<br>`cameraEnhancer.open()`<br>`router.startCapturing("SPECIFY-A-TEMPLATE")`                                           |
+| `reader.stopScanning()` or <br>`scanner.hide()`     | `router.stopCapturing()`<br>`cameraEnhancer.close()`<br>`cameraViewContainer.style.display = "none"`                                                                                                                                                                                                                                                       |
+| `reader.resumeScanning()`                           | `router.startCautring('SPECIFY-A-TEMPLATE')`                                                                                                                                                                                                                                                                                                               |
+
+### Process Settings
+
+The following assumes `ScanSettings` is the object returned by `reader.getScanSettings()` or `scanner.getScanSettings()` and `SimplifiedCaptureVisionSettings` is returned by `router.getSimplifiedSettings('SPECIFY-A-TEMPLATE')`.
+
+| API in v9.x                                                         | API in v10.x                                                                                                              |
+| ------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
+| `reader.getScanSettings()` or <br>`scanner.getScanSettings()`       | No equivalent.                                                                                                            |
+| `reader.updateScanSettings()` or <br>`scanner.updateScanSettings()` | No equivalent.                                                                                                            |
+| `ScanSettings.intervalTime`                                         | `SimplifiedCaptureVisionSettings.minImageCaptureInterval`                                                                 |
+| `ScanSettings.duplicateForgetTime`                                  | `let filter = new MultiFrameResultCrossFilter()`<br>`filter.setDuplicateForgetTime()`<br>`router.addResultFilter(filter)` |
+| `ScanSettings.whenToPlaySoundforSuccessfulRead`                     | No equivalent. Use `Dynamsoft.DCE.Feedback.beep()` when appropriate.                                                      |
+| `ScanSettings.soundOnSuccessfullRead`                               | `Dynamsoft.DCE.Feedback.beepSoundSource`                                                                                  |
+| `ScanSettings.whenToVibrateforSuccessfulRead`                       | No equivalent. Use `Dynamsoft.DCE.Feedback.vibrate()` when appropriate.                                                   |
+| `ScanSettings.vibrateDuration`                                      | `Dynamsoft.DCE.Feedback.vibrateDuration`                                                                                  |
+| `ScanSettings.captureAndDecodeInParallel`                           | Equivalent to setting `SimplifiedCaptureVisionSettings.minImageCaptureInterval` to -1 or 0.                               |
+| `ScanSettings.autoZoom`                                             | `cameraEnhancer.enableEnhancedFeatures(EnumEnhancedFeatures.EF_AUTO_ZOOM)`                                                |
+| `ScanSettings.autoFocus`                                            | `cameraEnhancer.enableEnhancedFeatures(EnumEnhancedFeatures.EF_ENHANCED_FOCUS)`                                           |
+| `ScanSettings.autoSuggestTip`                                       | No equivalent.                                                                                                            |
+
+
+### Algorithm Settings
+
+| API in v9.x                                                                                                                                     | API in v10.x                                                          |
+| ----------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
+| `reader.getRuntimeSettings()` or <br>`scanner.getRuntimeSettings()`                                                                             | `router.getSimplifiedSettings('SPECIFY-A-TEMPLATE')`                  |
+| `reader.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` or <br>`scanner.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` | `router.initSettings('SPECIFY-A-TEMPLATE-STRING')`                    |
+| `reader.updateRuntimeSettings('SPECIFY-THE-SETTINGS')` or <br>`scanner.updateRuntimeSettings('SPECIFY-THE-SETTINGS')`                           | `router.updateSettings('SPECIFY-A-TEMPLATE', 'SPECIFY-THE-SETTINGS')` |
+| `reader.resetRuntimeSettings()` or <br>`scanner.resetRuntimeSettings()`                                                                         | `router.resetSettings()`                                              |
+| `reader.outputRuntimeSettingsToString()` or <br>`scanner.outputRuntimeSettingsToString()`                                                       | `router.outputSettings()`                                             |
+
+## Change the APIs for user interface customization
+
+| API in v9.x                                                                                                                                      | API in v10.x                                                      |
+| ------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------- |
+| `scanner.getUIElement()`                                                                                                                         | `cameraView.getUIElement()`                                       |
+| `scanner.setUIElement()`                                                                                                                         | `cameraView.setUIElement()`                                       |
+| `Dynamsoft.DBR.BarcodeScanner.defaultUIElementURL="THE-URL-TO-THE-HTML"`                                                                         | `Dynamsoft.DCE.CameraView.createInstance("THE-URL-TO-THE-HTML")`  |
+| `scanner.barcodeFillStyle` <br>`scanner.barcodeStrokeStyle` <br>`scanner.barcodeLineWidth`                                                       | Change the preset style STYLE_GREEN_STROKE (ID = 2).              |
+| `scanner.barcodeFillStyleBeforeVerification` <br>`scanner.barcodeStrokeStyleBeforeVerification` <br>`scanner.barcodeLineWidthBeforeVerification` | Change the preset style STYLE_GREEN_STROKE_TRANSPARENT (ID = 10). |
+| `scanner.regionMaskFillStyle` <br>`scanner.regionMaskStrokeStyle` <br>`scanner.regionMaskLineWidth`                                              | `cameraView.setScanRegionMaskStyle()`                             |
+| `scanner.setVideoFit()`                                                                                                                          | `cameraView.setVideoFit()`                                        |
+| `scanner.getVideoFit()`                                                                                                                          | `cameraView.getVideoFit()`                                        |
+| `scanner.ifShowScanRegionMask`                                                                                                                   | `cameraView.setScanRegionMaskVisible()`                           |
+
+
+## Change the APIs for camera control
+
+| API in v9.x                                       | API in v10.x,  by the independent `CameraEnhancer` instance                    |
+| ------------------------------------------------- | ------------------------------------------------------------------------------ |
+| `scanner.open()`                                  | `cameraEnhancer.open()` <br>`router.startCautring('SPECIFY-A-TEMPLATE')`       |
+| `scanner.close()`                                 | `router.stopCapturing()` <br>`cameraEnhancer.close()`                          |
+| `scanner.isOpen()`                                | `cameraEnhancer.isOpen()`                                                      |
+| `scanner.singleFrameMode`                         | `cameraEnhancer.singleFrameMode`                                               |
+| `scanner.video`                                   | `cameraEnhancer.video`                                                         |
+| `scanner.ifSkipCameraInspection`                  | `cameraEnhancer.ifSkipCameraInspection`                                        |
+| `scanner.ifSaveLastUsedCamera`                    | `cameraEnhancer.ifSaveLastUsedCamera`                                          |
+| `scanner.getAllCameras()`                         | `cameraEnhancer.getAllCameras()`                                               |
+| `scanner.getCurrentCamera()`                      | `cameraEnhancer.getSelectedCamera()`                                           |
+| `scanner.setCurrentCamera()`                      | `cameraEnhancer.selectCamera()`                                                |
+| `scanner.getResolution()`                         | `cameraEnhancer.getResolution()`                                               |
+| `scanner.setResolution()`                         | `cameraEnhancer.setResolution()`                                               |
+| `scanner.getVideoSettings()`                      | `cameraEnhancer.getVideoSettings()`                                            |
+| `scanner.updateVideoSettings()`                   | `cameraEnhancer.updateVideoSettings()`                                         |
+| `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | `Dynamsoft.DCE.CameraEnhancer.testCameraAccess()`                              |
+| `scanner.play()`                                  | `cameraEnhancer.open()` or <br>`cameraEnhancer.resume()` if paused.            |
+| `scanner.onPlayed`                                | `cameraEnhancer.on("played", fn)`                                              |
+| `scanner.pauseScan()`                             | `router.stopCapturing()` while camera is still playing.                        |
+| `scanner.resumeScan()`                            | `router.startCapturing()` when camera is already playing.                      |
+| `scanner.pause()`                                 | `cameraEnhancer.pause()`                                                       |
+| `scanner.stop()`                                  | `cameraEnhancer.close()`                                                       |
+| `scanner.videoSrc`                                | `cameraEnhancer.videoSrc`                                                      |
+| `scanner.getCapabilities()`                       | `cameraEnhancer.getCapabilities()`                                             |
+| `scanner.getCameraSettings()`                     | `cameraEnhancer.getCameraSettings()`                                           |
+| `scanner.getFrameRate()`                          | `cameraEnhancer.getFrameRate()`                                                |
+| `scanner.setFrameRate()`                          | `cameraEnhancer.setFrameRate()`                                                |
+| `scanner.turnOnTorch()`                           | `cameraEnhancer.turnOnTorch()`                                                 |
+| `scanner.turnOffTorch()`                          | `cameraEnhancer.turnOffTorch()`                                                |
+| `scanner.getZoomSettings()`                       | `cameraEnhancer.getZoomSettings()`                                             |
+| `scanner.setZoom()`                               | `cameraEnhancer.setZoom()`                                                     |
+| `scanner.resetZoom()`                             | `cameraEnhancer.resetZoom()`                                                   |
+| `scanner.getFocusSettings()`                      | `cameraEnhancer.getFocusSettings()`                                            |
+| `scanner.setFocus()`                              | `cameraEnhancer.setFocus()`                                                    |
+| `scanner.enableTapToFocus()`                      | `cameraEnhancer.enableEnhancedFeatures(EnumEnhancedFeatures.EF_TAP_TO_FOCUS)`  |
+| `scanner.disableTapToFocus()`                     | `cameraEnhancer.disableEnhancedFeatures(EnumEnhancedFeatures.EF_TAP_TO_FOCUS)` |
+| `scanner.isTapToFocusEnabled()`                   | No equivalent.                                                                 |
+| `scanner.getColorTemperature()`                   | `cameraEnhancer.getColorTemperature()`                                         |
+| `scanner.setColorTemperature()`                   | `cameraEnhancer.setColorTemperature()`                                         |
+| `scanner.getExposureCompensation()`               | `cameraEnhancer.getExposureCompensation()`                                     |
+| `scanner.setExposureCompensation()`               | `cameraEnhancer.setExposureCompensation()`                                     |
+
+
+## Other APIs changes
+
+| API in v9.x                                                                      | API in v10.x                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `scanner.convertToPageCoordinates()`                                             | `cameraEnhancer.convertToPageCoordinates()`                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| `scanner.convertToClientCoordinates()`                                           | `cameraEnhancer.convertToClientCoordinates()`                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| `scanner.showTip()`                                                              | `cameraEnhancer.setTipConfig()` <br>`cameraEnhancer.setTipVisible(true)`                                                                                                                                                                                                                                                                                                                                                                                           |
+| `scanner.hideTip()`                                                              | `cameraEnhancer.setTipVisible(false)`                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| `scanner.onTipSuggested()`                                                       | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| `scanner.updateTipMessage()`                                                     | `cameraView.updateTipMessage()`                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = router.getSimplifiedSettings('SPECIFY-A-TEMPLATE')`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE`<br>`await router.updateSettings("detect-document-boundaries", settings)`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver()`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //}`<br>`router.addResultReceiver(resultReceiver)` |
